# fast-market

./: .gitignore  AGENTS.md  PROJECT.md  README.md  TESTS.md  TODO.md  pytest.ini  rm-pycache.sh
browser-cli/: agent-browser.md  pyproject.toml
browser-cli/cli/: main.py
browser-cli/commands/: base.py  completion.py  helpers.py
browser-cli/commands/doc/: register.py
browser-cli/commands/run/: browser_loop.py  browser_tool.py  register.py  session_utils.py
browser-cli/commands/script/: register.py
browser-cli/commands/setup/: register.py
browser-cli/commands/start/: register.py
browser-cli/commands/stop/: register.py
browser-cli/core/: config.py
common-setup-cli/: AGENTS.md  README.md  pyproject.toml
common-setup-cli/commands/autocomplete/: __init__.py  register.py
common-setup-cli/commands/setup/: register.py
corpus-agent/: .gitignore  AGENTS.md  alembic.ini  pyproject.toml  setup_wizard.py  structlog.py  yaml.py
corpus-agent/.doc/skills/: HOW_TO_ADD_A_COMMAND.md  HOW_TO_ADD_A_PLUGIN.md
corpus-agent/_doc/adr/: 001-plugin-sytem.md  003-sync-error-handling.md
corpus-agent/api/: server.py
corpus-agent/cli/: AGENTS.md  main.py
corpus-agent/commands/: AGENTS.md  base.py  helpers.py
corpus-agent/commands/db_migrate/: register.py
corpus-agent/commands/delete/: AGENTS.md  register.py
corpus-agent/commands/embed_server/: register.py
corpus-agent/core/: AGENTS.md  config.py  embedder.py  embedding_server.py  models.py  paths.py  registry.py  sync_engine.py
corpus-agent/frontend/: AGENTS.md  failures.html  index.html  items.html  search.html  status.html
corpus-agent/plugins/: base.py
corpus-agent/storage/: AGENTS.md  models.py  sqlalchemy_store.py  sqlite_store.py
corpus-agent/tests/: conftest.py  test_api.py  test_cli.py  test_embed_server.py  test_embedder.py  test_paths_config.py  test_storage.py  test_sync_engine.py  test_yaml_shim.py  test_youtube.py
global-setup/: AGENTS.md  cli.py  pyproject.toml
global-setup/setup_entry/: __init__.py
image-agent/: AGENTS.md  README.md  pyproject.toml
image-agent/cli/: main.py
image-agent/commands/: base.py  helpers.py
image-agent/core/: config.py  engine.py  models.py
image-agent/plugins/: base.py
image-agent/tests/: conftest.py  test_cli.py  test_models.py  test_plugins.py
message-cli/: AGENTS.md  pyproject.toml
message-cli/cli/: main.py
message-cli/core/: models.py
message-cli/plugins/: base.py
monitor-agent/: AGENTS.md  README.md  pyproject.toml
monitor-agent/cli/: main.py
monitor-agent/commands/: AGENTS.md  base.py  helpers.py
monitor-agent/core/: AGENTS.md  executor.py  models.py  rule_engine.py  rule_parser.py  scheduler.py  storage.py  time_scheduler.py
monitor-agent/plugins/: AGENTS.md  base.py
monitor-agent/tests/: conftest.py  test_executor.py  test_force_mode.py  test_plugins.py  test_rule_engine.py  test_storage.py  test_time_scheduler.py
monitor-cli/: AGENTS.md  README.md  config_guide.yaml  pyproject.toml
monitor-cli/api/: server.py
monitor-cli/cli/: main.py
monitor-cli/commands/: helpers.py  params.py
monitor-cli/core/: AGENTS.md  config_schema.py  executor.py  models.py  rule_engine.py  rule_formatter.py  storage.py
monitor-cli/plugins/: AGENTS.md  base.py
monitor-cli/tests/: test_force_mode.py  test_new_plugins.py  test_plugins.py  test_rule_formatter.py  test_rule_parser.py  test_storage.py  test_time_scheduler.py  test_webux_monitor_imports.py
monitor-cli/ui/: debug.html  logs.html  status.html
monitor-cli/webux/: AGENTS.md
prompt-agent/: AGENTS.md  README.md  TASK.md  alembic.ini  pyproject.toml
prompt-agent/cli/: main.py
prompt-agent/commands/: helpers.py
prompt-agent/core/: models.py  session.py  substitution.py  task_prompt.py
prompt-agent/migrations/: env.py
prompt-agent/plugins/: base.py
prompt-agent/storage/: file_store.py  models.py  store.py
prompt-agent/tests/: test_aliases.py  test_skills.py  test_store_and_cli.py  test_substitution.py  test_task_prompt.py
prompt-cli/: AGENTS.md  README.md  TASK.md  pyproject.toml
prompt-cli/cli/: main.py
prompt-cli/commands/: completion.py  helpers.py
prompt-cli/core/: models.py  substitution.py
prompt-cli/storage/: file_store.py  store.py
prompt-cli/tests/: test_aliases.py  test_implicit_stdin.py  test_store_and_cli.py  test_substitution.py
skill-agent/: AGENTS.md  pyproject.toml
skill-agent/skill_entry/: __init__.py
skill-cli/: AGENTS.md  README.md  pyproject.toml
skill-cli/cli/: main.py
skill-cli/commands/: base.py  helpers.py  params.py
skill-cli/core/: AGENTS.md  __init__.py  description_to_skill.py  plan_utils.py  repl.py  router.py  runner.py  session_to_skill.py  skill.py
skill-cli/skill_entry/: __init__.py
social-cli/: pyproject.toml
social-cli/cli/: main.py
social-cli/commands/: base.py  completion.py  helpers.py
social-cli/core/: __init__.py  config.py
social-cli/plugins/: base.py
social-cli/tests/: conftest.py  test_cli.py  test_command_post.py  test_setup.py
task-cli/: AGENTS.md  pyproject.toml
task-cli/commands/: __init__.py  completion.py
task-cli/core/: session.py  task_prompt.py
task-cli/task_entry/: __init__.py
tiktok-cli/: pyproject.toml
tiktok-cli/cli/: main.py
tiktok-cli/commands/: base.py
tiktok-cli/core/: config.py
toolsetup-cli/: AGENTS.md  README.md  cli.py  pyproject.toml
toolsetup-cli/commands/: completion.py  snapshot_service.py
webux-cli/: AGENTS.md  pyproject.toml
webux-cli/cli/: main.py
webux-cli/commands/: __init__.py
webux-cli/core/: __init__.py  security.py  server.py
webux-cli/plugins/: __init__.py  base.py
webux-cli/tests/: test_fileviewer_listing.py  test_server_lazy.py  test_yt_poster.py
youtube-agent/: README.md  pyproject.toml
youtube-agent/cli/: main.py
youtube-agent/commands/: base.py
youtube-agent/core/: engine.py
youtube-cli/: AGENTS.md  README.md  pyproject.toml
youtube-cli/cli/: main.py
youtube-cli/commands/: batch_utils.py
youtube-cli/core/: config.py  engine.py
youtube-cli/tests/: test_batch_reply_filter.py  test_prompt_processor.py
(+459 files in other folders)
