[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-setup"
version = "0.1.0"
description = "Common configuration CLI for fast-market"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "prompt-agent>=0.1.0",
]

[project.scripts]
common-setup = "setup_entry:main"

[tool.setuptools]
packages = [
  "setup_entry",
  "commands",
  "commands.setup",
]