[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-agent"
version = "0.1.0"
description = "Local corpus indexing and search agent"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "structlog>=24.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
corpus = "cli.main:main"

[tool.setuptools]
packages = ["cli", "core", "storage", "plugins", "plugins.obsidian", "plugins.youtube", "api"]
