[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-agent"
version = "0.1.0"
description = "Local corpus indexing and search agent"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "structlog>=24.2",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=3.0"]
youtube = [
  "google-api-python-client>=2.0",
  "google-auth-oauthlib>=1.0",
  "youtube-transcript-api>=0.6",
  "yt-dlp-ejs>=0.4.0",
]
whisper = [
  "yt-dlp>=2024.1",
  "openai-whisper>=20231117",
]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
corpus = "cli.main:main"

[tool.setuptools]
packages = ["common", "common.core", "common.auth", "common.cli", "cli", "core", "storage", "plugins", "plugins.obsidian", "plugins.youtube", "api", "commands", "commands.sync", "commands.search", "commands.list", "commands.get", "commands.delete", "commands.status", "commands.reindex", "commands.serve", "commands.setup", "commands.setconfig", "commands.retry_failures", "commands.db_migrate", "commands.embed_server"]
py-modules = ["setup_wizard", "structlog", "yaml"]
