[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-agent"
version = "0.1.0"
description = "Monitor web sources and trigger actions based on rules"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "aiohttp>=3.9",
    "croniter>=2.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
youtube = [
    "google-api-python-client>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black",
    "ruff",
]

[project.scripts]
monitor = "monitor_entry:main"

[tool.setuptools]
packages = [
    "cli",
    "core",
    "plugins",
    "plugins.youtube",
    "plugins.rss",
    "commands",
    "commands.setup",
    "commands.run",
    "commands.logs",
    "commands.status",
    "monitor_entry",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
