[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-agent"
version = "0.1.0"
description = "CLI tool for managing and applying LLM prompts"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "auto-click-auto>=0.1.0",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "anthropic>=0.18",
  "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
prompt = "prompt_entry:main"

[tool.setuptools]
packages = [
    "common",
    "common.core",
    "common.auth",
    "common.cli",
    "common.storage",
    "common.llm",
    "common.llm.anthropic",
    "common.llm.openai",
    "common.llm.openai_compatible",
    "common.llm.ollama",
    "cli",
    "core",
    "storage",
    "commands",
    "commands.create",
    "commands.list",
    "commands.get",
    "commands.update",
    "commands.delete",
    "commands.apply",
    "commands.setup",
    "commands.providers",
    "commands.logs",
    "commands.edit",
    "prompt_entry",
]
