[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-agent"
version = "0.1.0"
description = "Skill management CLI for fast-market"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "auto-click-auto>=0.1.0",
  "pyyaml>=6.0",
]

[project.scripts]
skill = "skill_entry:main"

[tool.setuptools]
packages = [
  "cli",
  "core",
  "skill_entry",
  "commands",
]