[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolsetup"
version = "0.1.0"
description = "Tool configuration CLI for fast-market"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "auto-click-auto>=0.1.0",
  "pyyaml>=6.0",
  "prompt-agent>=0.1.0",
  "uuid6>=2023.5.2",
]

[project.scripts]
toolsetup = "toolsetup_entry:main"

[tool.setuptools]
packages = [
  "toolsetup_entry",
  "commands",
  "commands.setup",
  "commands.autocomplete",
  "commands.conf",
]