[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webux-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "auto-click-auto>=0.1.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "structlog>=24.2",
]

[project.scripts]
webux = "webux_entry:main"

[project.entry-points."fast_market.webux_plugins"]
fileviewer = "webux.fileviewer.register:register"
yt_poster = "webux.yt_poster.register:register"
skill_runner = "webux.skill_runner.register:register"

[tool.setuptools]
packages = [
    "webux_entry",
    "cli",
    "core",
    "plugins",
    "webux",
    "webux.fileviewer",
    "webux.yt_poster",
    "webux.skill_runner",
    "commands",
    "commands.serve",
]
